[IRGen] Add proper conditions for LoadableByAddress transformation.

When it comes to functions with tuple result types in
the LoadableByAddress pass, we do not intend to perform
relevant transformation, but somehow some implementation
is not right. This patch adds appropriate checks to correct
such transformation conditions.

Resolves: SR-8076.